src/base/objects/Asset_Entity_Relationship__c/Asset_Entity_Relationship__c.object-meta.xml
<CustomObject>
    <label>Asset Entity Relationship</label>
    <nameField>
        <displayFormat>AER-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asset Entity Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>