src/base/objects/Asset_Entity_Relationship__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Entity_Asset_Relationship</relationshipName>
    <type>Lookup</type>
</CustomField>