src/base/objects/Asset_Entity_Relationship__c/fields/Entity__c.field-meta.xml
<CustomField>
    <fullName>Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Entity</label>
    <referenceTo>Entity__c</referenceTo>
    <relationshipName>Entity_Asset_Relationship</relationshipName>
    <type>Lookup</type>
</CustomField>