src/base/objects/Asset_Entity_Relationship__c/fields/Monorail_UUID__c.field-meta.xml
<CustomField>
    <fullName>Monorail_UUID__c</fullName>
    <formula>Entity__r.Monorail_UUID__c</formula>
    <label>Monorail UUID</label>
    <type>Text</type>
</CustomField>