src/base/objects/Asset_Entity_Relationship__c/fields/Trading_Volume__c.field-meta.xml
<CustomField>
    <fullName>Trading_Volume__c</fullName>
    <formula>Entity__r.Trading_Volume__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trading Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>